--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,7 @@ RoxygenNote: 7.1.2
 Imports: 
     assertthat,
     utilitybeltassertions (>= 0.0.0.9000)
-Remotes:  
+Remotes: 
     selkamand/utilitybeltassertions
+URL: https://github.com/selkamand/utilitybeltuserinput
+BugReports: https://github.com/selkamand/utilitybeltuserinput/issues
